# rcpu

./: Cargo.toml
src/: lib.rs  main.rs
src/cpu/: cpu.rs  mem.rs  mod.rs  pipeline.rs  reg.rs  traits.rs
tests/: cli.rs
tests/rv64ui/: rv64ui-p-add  rv64ui-p-add.dump  rv64ui-p-addi  rv64ui-p-addi.dump  rv64ui-p-addiw  rv64ui-p-addiw.dump  rv64ui-p-addw  rv64ui-p-addw.dump  rv64ui-p-and  rv64ui-p-and.dump  rv64ui-p-andi  rv64ui-p-andi.dump  rv64ui-p-auipc  rv64ui-p-auipc.dump  rv64ui-p-beq  rv64ui-p-beq.dump  rv64ui-p-bge  rv64ui-p-bge.dump  rv64ui-p-bgeu  rv64ui-p-bgeu.dump  rv64ui-p-blt  rv64ui-p-blt.dump  rv64ui-p-bltu  rv64ui-p-bltu.dump  rv64ui-p-bne  rv64ui-p-bne.dump  rv64ui-p-fence_i  rv64ui-p-fence_i.dump  rv64ui-p-jal  rv64ui-p-jal.dump  rv64ui-p-jalr  rv64ui-p-jalr.dump  rv64ui-p-lb  rv64ui-p-lb.dump  rv64ui-p-lbu  rv64ui-p-lbu.dump  rv64ui-p-ld  rv64ui-p-ld.dump  rv64ui-p-lh  rv64ui-p-lh.dump  (+63 more)
