[package]
name = "rcpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
tui = { version = "0.19", default-features = false, features = ['termion'] }


[dev-dependencies]
assert_cmd = "2"
predicates = "2"
